center body content

--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ html {
 }
 
 body {
+    align-items: center;
+    display: flex;
     font-family: 'arya', sans-serif;
     font-size: 1.6rem;
     font-weight: 400;
+    justify-content: center;
+    min-height: 100vh;
+    overflow: hidden;
 }
