--- a/style.css
+++ b/style.css
@@ -20,3 +20,17 @@ body {
     min-height: 100vh;
     overflow: hidden;
 }
+
+.container {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 90vw;
+}
+
+.panel {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    height: 80vh;
+}
