--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
 
 .panel.active {
 	flex: 5;
+    box-shadow: rgba(255, 255, 255, 0.1) 0 1px 1px 0 inset, rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0 30px 60px -30px;
 }
 
 .panel.active .panel-heading {
