--- a/style.css
+++ b/style.css
@@ -35,11 +35,12 @@ body {
 	border-radius: 5rem;
 	color: #fff;
 	cursor: pointer;
+	filter: sepia(90%) blur(.2rem);
 	flex: 0.5;
 	height: 80vh;
 	margin: 1em;
 	position: relative;
-	transition: flex 500ms ease-in;
+	transition: flex 500ms ease-in, filter 500ms ease-in;
 }
 
 .panel-heading {
@@ -54,8 +55,9 @@ body {
 }
 
 .panel.active {
+	box-shadow: rgba(255, 255, 255, 0.1) 0 1px 1px 0 inset, rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0 30px 60px -30px;
+	filter: none;
 	flex: 5;
-    box-shadow: rgba(255, 255, 255, 0.1) 0 1px 1px 0 inset, rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0 30px 60px -30px;
 }
 
 .panel.active .panel-heading {
