--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 	font-size: 2.2rem;
 	left: 2rem;
 	opacity: 0;
+	padding:.5rem;
 	position: absolute;
 	right: 2rem;
 	transition: opacity 500ms ease-in;
